Fix #2 spotlight bug on Safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,8 +21,9 @@
     --light-timer-elapsed: #B5B5B5;
 }
 
-html {
+html, body {
     padding: 0;
+    position: relative;
     overflow-y: hidden;
 }
 
